# pySigma-backend-stix

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/stix/: __init__.py  stix.py
sigma/pipelines/stix/: __init__.py  stix.py
tests/: test_backend_stix.py  test_pipelines_stix.py
