[tool.poetry]
name = "pySigma-backend-stix"
version = "0.1.5"
description = "STIX language backend for pySigma convertor"
authors = ["Cyber-center of Excellence <barha@il.ibm.com>"]
license = "MIT"
repository = "https://github.com/barvhaim/pySigma-backend-stix"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
